# cultiva-client

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs  setup.rs  shell.rs
cli/src/setup/: arduino_cli.rs  save_settings.rs
common/: Cargo.toml
common/src/: context.rs  credentials.rs  db_client.rs  lib.rs  locales.rs  rest_client.rs  settings.rs  state_handling.rs  tests.rs
cultiva_1.0.0_all/DEBIAN/: control  postinst
cultiva_1.0.0_all/etc/systemd/system/: cultiva.service
cultiva_1.0.0_all/usr/share/applications/: cultiva.desktop
dockerfiles/: raspberry_pi5.dockerfile
locales/: en.yml  es.yml
src/: db_client.rs  main.rs  rest_client.rs  service.rs  settings.rs  setup.rs  shell.rs  tests.rs
src/service/: capture.rs  serial.rs  socket_io.rs  supervision.rs
src/setup/: arduino_cli.rs  save_settings.rs
