[package]
name = "cultiva-client"
version = "0.1.0"
edition = "2024"

[dependencies]
dialoguer = "0.12.0"
reqwest = { version = "0.13.2", features = ["json"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
rust-i18n = "3.1.5"
sudo = "0.6.0"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.19"
toml = "0.9.12"

[package.metadata.i18n]
available-locales = ["en", "es"]
default-locale = "en"
load-path = "locales"
