[package]
name = "cultiva-client"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["cli", "common"]

[dependencies]

rust-i18n = "3.1.5"
sudo = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serialport = "4.8.1"
serde_json = "1.0.149"
rust_socketio = "0.6.0"
common = {path = "common"}

[package.metadata.i18n]
available-locales = ["en", "es"]
default-locale = "en"
load-path = "locales"

#Install required system packages: libssl and libudev
[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update",
    "apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH",
    "apt-get --assume-yes install libudev-dev:$CROSS_DEB_ARCH"
]

[target.aarch64-unknown-linux-gnu]
image.name = "debian:trixie"