[package]
name = "cultiva-client"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["cli", "common"]

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
dockerfile="dockerfiles/raspberry_pi5.dockerfile"

[dependencies]
rust-i18n = "3.1.5"
sudo = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serialport = "4.8.1"
serde_json = "1.0.149"
rust_socketio = "0.6.0"
common = {path = "common"}

[package.metadata.i18n]
available-locales = ["en", "es"]
default-locale = "en"
load-path = "locales"