[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
common = {path = "../common"}
rust-i18n = "3.1.5"
sudo = "0.6.0"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
dialoguer = "0.12.0"
toml = "0.9.12"
git2 = "0.20.4"

[package.metadata.i18n]
available-locales = ["en", "es"]
default-locale = "en"
load-path = "../locales"