[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-i18n = "3.1.5"
reqwest = { version = "0.13.2", features = ["json"] }
rusqlite = { version = "0.38.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.19"
toml = "0.9.12+spec-1.1.0"
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }

[package.metadata.i18n]
available-locales = ["en", "es"]
default-locale = "en"
load-path = "../locales"